array.island.Island.scala.error
Compilation error:
Island:7: error: identifier expected but integer literal found.
  var first=num[0]
                ^Island:8: error: ']' expected but ';' found.
  for (k<- 1 to size(num)){
^Island:9: error: '(' expected but identifier found.
    if num[k]==num[0]{
       ^Island:12: error: illegal start of simple expression
  }  
  ^